--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -11,13 +11,13 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@prisma/client": "5.3.1",
-    "zod": "^3.22.2"
+    "@prisma/client": "^5.4.2",
+    "zod": "^3.22.2",
+    "zod-prisma": "^0.5.4",
+    "prisma": "^5.4.2"
   },
   "devDependencies": {
-    "prisma": "^5.3.1", 
     "dotenv-cli": "^7.2.1",
-    "zod-prisma": "^0.5.4",
     "@types/node": "20.8.0",
     "eslint": "^8.50.0",
     "prettier": "^3.0.3",
