--- a/turbo.json
+++ b/turbo.json
@@ -9,6 +9,7 @@
     "build": {
       "dependsOn": ["^build", "@turbocell/db#db:generate"],
       "outputs": [".next/**", "!.next/cache/**", "next-env.d.ts", ".expo/**"],
+      "cache": false,
       "env": [
         "DATABASE_URL",
         "EMAIL_SERVER_HOST",
