--- a/packages/shadcn/package.json
+++ b/packages/shadcn/package.json
@@ -9,8 +9,6 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@turbocell/tailwind-config":"workspace:*",
-    "@turbocell/utils": "workspace:*",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -19,11 +17,14 @@
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-slot": "^1.0.2",
+    "@turbocell/tailwind-config": "workspace:*",
+    "@turbocell/utils": "workspace:*",
     "class-variance-authority": "^0.7.0",
     "cmdk": "^0.2.0",
     "lucide-react": "^0.284.0",
     "react": "^18",
-    "sonner": "^1.0.3"
+    "sonner": "^1.0.3",
+    "tailwindcss": "3.3.2"
   },
   "devDependencies": {
     "@turbocell/tsconfig": "workspace:*",
