--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   },
   "packageManager": "pnpm@8.7.5",
   "scripts": {
-    "build": "turbo run build",
+    "build": "turbo db:generate && turbo run build",
     "clean": "git clean -xdf node_modules",
     "clean:workspaces": "turbo clean",
     "db:generate": "turbo db:generate",
