--- a/tooling/eslint/package.json
+++ b/tooling/eslint/package.json
@@ -1,40 +1,25 @@
 {
   "name": "@turbocell/eslint-config",
-  "version": "0.2.0",
-  "private": true,
-  "license": "MIT",
+  "version": "0.0.0",
+  "type": "commonjs",
   "files": [
-    "./base.js",
-    "./nextjs.js",
-    "./react.js"
+    "node.js",
+    "next.js"
   ],
   "scripts": {
-    "clean": "rm -rf .turbo node_modules",
-    "lint": "eslint .",
-    "format": "prettier --check \"**/*.{mjs,ts,md,json}\"",
-    "typecheck": "tsc --noEmit"
+    "format": "prettier \"**/*.{ts,tsx,md,mdx,json}\" --check"
   },
   "dependencies": {
-    "@next/eslint-plugin-next": "^13.5.4",
-    "@types/eslint": "^8.44.3",
-    "@typescript-eslint/eslint-plugin": "^6.7.3",
-    "@typescript-eslint/parser": "^6.7.3",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-config-turbo": "^1.10.15",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0"
+    "@next/eslint-plugin-next": "canary",
+    "@turbocell/tsconfig": "workspace:*",
+    "@typescript-eslint/eslint-plugin": "^5.59.1",
+    "@typescript-eslint/parser": "^5.59.1",
+    "@vercel/style-guide": "^4.0.2",
+    "eslint": "^8.45.0",
+    "eslint-config-turbo": "^1.10.12",
+    "typescript": "^5.1.6"
   },
   "devDependencies": {
-    "@turbocell/tsconfig": "workspace:*",
-    "eslint": "^8.50.0",
-    "typescript": "^5.2.2"
-  },
-  "eslintConfig": {
-    "root": true,
-    "extends": [
-      "./base.js"
-    ]
+    "eslint-plugin-unused-imports": "^3.0.0"
   }
 }
