--- a/tooling/eslint/tsconfig.json
+++ b/tooling/eslint/tsconfig.json
@@ -1,9 +1,11 @@
 {
-    "extends": "@turbocell/tsconfig/base.json",
-    "compilerOptions": {
-      "tsBuildInfoFile": "node_modules/.cache/tsbuildinfo.json"
-    },
-    "include": ["."],
-    "exclude": ["node_modules"]
-  }
-  
+  "extends": "@turbocell/tsconfig/base.json",
+  "compilerOptions": {
+    "allowJs": true,
+    "module": "ESNext",
+    "target": "ESNext",
+    "checkJs": true,
+    "resolveJsonModule": true
+  },
+  "exclude": ["node_modules"]
+}
