--- a/tooling/tailwind/package.json
+++ b/tooling/tailwind/package.json
@@ -9,5 +9,8 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
     "tailwindcss": "^3.2.4"
+  },
+  "dependencies": {
+    "tailwindcss-animate": "^1.0.7"
   }
 }
