--- a/turbo.json
+++ b/turbo.json
@@ -7,7 +7,7 @@
       "cache": false
     },
     "build": {
-      "dependsOn": ["^build"],
+      "dependsOn": ["^build", "@turbocell/db#db:generate"],
       "outputs": [".next/**", "!.next/cache/**", "next-env.d.ts"],
       "cache": false,
       "env": [
