--- a/apps/express-server/package.json
+++ b/apps/express-server/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@turbocell/api": "workspace:*",
     "@turbocell/db": "workspace:*",
+    "@turbocell/trpc-express": "workspace:*",
     "@types/formidable": "^3.4.3",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
@@ -30,6 +31,7 @@
     "helmet": "^7.0.0",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
+    "swagger-ui-express": "^5.0.0",
     "zod": "^3.22.2"
   },
   "devDependencies": {
@@ -43,6 +45,7 @@
     "@types/express-session": "^1.17.8",
     "@types/jsonwebtoken": "^9.0.3",
     "@types/node": "20.8.0",
+    "@types/swagger-ui-express": "^4.1.6",
     "concurrently": "^8.2.2",
     "esbuild": "^0.14.38",
     "esbuild-register": "^3.3.2",
