--- a/apps/express-server/tsconfig.json
+++ b/apps/express-server/tsconfig.json
@@ -4,6 +4,11 @@
     "tsBuildInfoFile": "node_modules/.cache/tsbuildinfo.json",
     "rootDir": "./src",
     "outDir": "./dist",
+    "target": "es2016",
+    "module": "ESNext",
+    "types": ["node"],
+    "esModuleInterop": true,
+    "skipLibCheck": true,
     "baseUrl": "src"
   },
   "exclude": ["node_modules"],
