--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,6 +14,7 @@
     "@turbocell/auth": "workspace:*",
     "@turbocell/db": "workspace:*",
     "@turbocell/tailwind-config": "workspace:*",
+    "@turbocell/trpc": "workspace:*",
     "@turbocell/ui": "workspace:*",
     "@turbocell/utils": "workspace:*",
     "@types/react": "^18",
@@ -25,17 +26,19 @@
     "react-dom": "^18",
     "react-query": "^3.39.3",
     "sonner": "^1.0.3",
+    "swagger-ui-react": "^5.10.5",
     "tailwindcss-animate": "^1.0.6",
     "zod": "^3.22.3"
   },
   "devDependencies": {
-    "@turbocell/eslint-config": "workspace:*",
     "@tailwindcss/container-queries": "^0.1.1",
     "@tailwindcss/typography": "^0.5.9",
+    "@turbocell/eslint-config": "workspace:*",
     "@turbocell/tsconfig": "workspace:*",
     "@types/node": "20.8.0",
-    "postcss": "^8.4.26",
+    "@types/swagger-ui-react": "^4.18.3",
     "eslint": "^8.50.0",
+    "postcss": "^8.4.26",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.4.1",
     "tailwindcss": "^3.3.3",
