--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -30,7 +30,8 @@
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.10",
     "@turbocell/db": "workspace:*",
-    "next-auth": "5.0.0-beta.3"
+    "next-auth": "5.0.0-beta.4",
+    "nodemailer": "^6.9.7"
   },
   "devDependencies": {
     "@turbocell/eslint-config": "workspace:*",
